<resources>
    <!-- App Name -->
    <string name="app_name">BodyHealth</string>

    <!-- activity_welcome -->
    <string name="welcome">Bem-vindo à BodyHealth!</string>
    <string name="register">Registo</string>
    <string name="login">Login</string>

    <!-- activity_register -->
    <string name="firstNameRegister">Inserir Primeiro Nome</string>
    <string name="lastNameRegister">Inserir Último Nome</string>
    <string name="emailRegister">Inserir E-mail</string>
    <string name="passwordRegister">Inserir Palavra-passe</string>
    <string name="passwordConfirmationRegister">Confirmar Palavra-passe</string>

    <!-- activity_login -->
    <string name="emailLogin">Inserir E-mail</string>
    <string name="passwordLogin">Inserir Palavra-passe</string>
    <string name="forgotPasswordLogin">Esqueceu-se da Palavra-passe?</string>

    <!-- activity_logout -->
    <string name="byeLogout">Até já &#128578;</string>
    <string name="seeYouSoonLogout">Esperamos voltar a ver-te em breve!</string>

    <!-- activity_forgotten_password -->
    <string name="forgotPasswordFP">Esqueceu-se da Palavra-passe?</string>
    <string name="emailRegisterFP">Insira o e-mail de registo para a recuperar</string>

    <!-- activity_profile -->
    <string name="myProfile">O Meu Perfil</string>
    <string name="nameProfile">Pedro Silva</string>
    <string name="emailProfile">pedrosilva@gmail.com</string>
    <string name="passwordProfile">**********</string>
    <string name="genderProfile">Masculino</string>
    <string name="phoneNumberProfile">+351 911 222 333</string>
    <string name="birthdayProfile">01/01/2000</string>

    <!-- activity_dashboard -->
    <string name="profileDashboard">PERFIL</string>
    <string name="helloDashboard">Olá Pedro Silva</string>
    <string name="timeActivityDashboard"><font fgcolor="#FF808080">Hoje fizeste</font><font fgcolor="#FF000000"> 7 min </font><font fgcolor="#FF808080">de atividade física</font></string>
    <string name="stepsNumberDashboard"><font size="100">500 \n</font><font fgcolor="#FF808080" size="50">PASSOS</font></string>
    <string name="distanceDashboard"><font size="25">Distância\n</font><font fgcolor="#FF000000" size="20">0,350 </font><font fgcolor="#FF808080" size="20">m</font></string>
    <string name="caloriesDashboard"><font size="25">Calorias\n</font><font fgcolor="#FF000000" size="20">7,25 </font><font fgcolor="#FF808080" size="20">kcal</font></string>
    <string name="diabetesDashboard">Diabetes</string>
    <string name="bloodPressureDashboard">Tensão Arterial</string>
    <string name="measuresDashboard">Medidas</string>

    <!-- activity_blood_pressure_checkup -->
    <string name="bloodPressure">Tensão Arterial</string>
    <string name="checkupRegisterBloodPressure">Consultar Registo</string>
    <string name="last3RegistersBloodPressure">3 registos mais recentes:</string>
    <string name="data1BloodPressure">16/03/2022 às 16:45</string>
    <string name="data2BloodPressure">05/03/2022 às 18:40</string>
    <string name="data3BloodPressure">22/02/2022 às 09:15</string>
    <string name="newRegisterBloodPressure">Novo Registo</string>
    <string name="previousRegistersBloodPressure">Registos Anteriores</string>

    <!-- activity_blood_pressure_dashboard -->
    <string name="helloBloodPressure">Olá Pedro Silva</string>
    <string name="lastRegisterBloodPressure">Último registo:</string>
    <string name="dataRegisterBloodPressure">- 07 de Março 2022, às 18:15</string>
    <string name="pul_minBloodPressure"><font fgcolor="#FF000000" size="50">&#x2665; 70\n</font><font fgcolor="#FF808080" size="25">PUL/min</font></string>
    <string name="maxBloodPressure"><font fgcolor="#FF000000" size="70">129\n</font><font fgcolor="#FF808080" size="20">mmHg</font></string>
    <string name="minBloodPressure"><font fgcolor="#FF000000" size="70">83\n</font><font fgcolor="#FF808080" size="20">mmHg</font></string>
    <string name="checkRegistersBloodPressure">Consultar Registos</string>

    <!-- activity_blood_pressure_register -->
    <string name="newRegister_BloodPressure">Novo Registo</string>
    <string name="choiceTypeRegistersBloodPressure">Escolher uma das 3 opções:</string>
    <string name="manualRegisterBloodPressure">REGISTO MANUAL</string>
    <string name="voiceRegisterBloodPressure">REGISTO POR VOZ</string>
    <string name="scanRegisterBloodPressure">REGISTO POR SCAN</string>

    <!-- activity_diabetes_checkup -->
    <string name="diabetes">Diabetes</string>
    <string name="checkupRegisterDiabetes">Consultar Registo</string>
    <string name="last3RegistersDiabetes">3 registos mais recentes:</string>
    <string name="data1Diabetes">16/03/2022 às 16:45</string>
    <string name="data2Diabetes">05/03/2022 às 18:40</string>
    <string name="data3Diabetes">22/02/2022 às 09:15</string>
    <string name="newRegisterDiabetes">Novo Registo</string>
    <string name="previousRegistersDiabetes">Registos Anteriores</string>

    <!-- activity_diabetes_dashboard -->
    <string name="helloDiabetes">Olá Pedro Silva</string>
    <string name="lastRegisterDiabetes">Último registo:</string>
    <string name="dataRegisterDiabetes">- 07 de Março 2022, às 18:15</string>
    <string name="mg_dl_Diabetes"><font fgcolor="#FF000000" size="50">🩸90\n</font><font fgcolor="#FF808080" size="25">mg/dl</font></string>

    <!-- activity_diabetes_register -->
    <string name="newRegister_Diabetes">Novo Registo</string>
    <string name="choiceTypeRegistersDiabetes">Escolher uma das 3 opções:</string>
    <string name="manualRegisterDiabetes">REGISTO MANUAL</string>
    <string name="voiceRegisterDiabetes">REGISTO POR VOZ</string>
    <string name="scanRegisterDiabetes">REGISTO POR SCAN</string>
    <string name="checkRegistersDiabetes">Consultar Registos</string>

    <!-- activity_measures_checkup -->
    <string name="measures">Medidas</string>
    <string name="checkupRegisterMeasures">Consultar Registo</string>
    <string name="last3RegistersMeasures">3 registos mais recentes:</string>
    <string name="data1Measures">16/03/2022 às 16:45</string>
    <string name="data2Measures">05/03/2022 às 18:40</string>
    <string name="data3Measures">22/02/2022 às 09:15</string>
    <string name="newRegisterMeasures">Novo Registo</string>
    <string name="previousRegistersMeasures">Registos Anteriores</string>

    <!-- activity_measures_dashboard -->
    <string name="helloMeasures">Olá Pedro Silva</string>
    <string name="lastRegisterMeasures">Último registo:</string>
    <string name="dataRegisterMeasures">- 07 de Março 2022, às 18:15</string>
    <string name="imcMeasures"><font fgcolor="#FF000000" size="50">24,2\n</font><font fgcolor="#FF808080" size="25">IMC</font></string>
    <string name="maxMeasures"><font fgcolor="#FF000000" size="30">1,84\n</font><font fgcolor="#FF808080" size="20">m</font></string>
    <string name="minMeasures"><font fgcolor="#FF000000" size="30">82,25\n</font><font fgcolor="#FF808080" size="20">kg</font></string>
    <string name="checkRegistersMeasures">Consultar Registos</string>

    <!-- activity_measures_register -->
    <string name="newRegister_Measures">Novo Registo</string>
    <string name="choiceTypeRegistersMeasures">Escolher uma das 3 opções:</string>
    <string name="manualRegisterMeasures">REGISTO MANUAL</string>
    <string name="voiceRegisterMeasures">REGISTO POR VOZ</string>
    <string name="scanRegisterMeasures">REGISTO POR SCAN</string>

    <!-- activity_resume_activity -->
    <string name="activityResumeActivity">Atividade</string>
    <string name="activityWeekResumeActivity">SEMANA 10 – 2022 \n 07 a 13 de MARÇO</string>
    <string name="mondayResumeActivity">SEGUNDA\n\n<font fgcolor="#B22222">7510 / 8000 Passos\n</font> <font fgcolor="#008000">6,4 / 6,5 KM\n</font><font fgcolor="#0047AB">415 / 400 KCAL</font></string>
    <string name="tuesdayResumeActivity">TERÇA\n\n<font fgcolor="#B22222">7440 / 8000 Passos\n</font> <font fgcolor="#008000">6,3 / 6,5 KM\n</font><font fgcolor="#0047AB">490 / 400 KCAL</font></string>
    <string name="wednesdayResumeActivity">QUARTA\n\n<font fgcolor="#B22222">8943 / 8000 Passos\n</font> <font fgcolor="#008000">7,7 / 6,5 KM\n</font><font fgcolor="#0047AB">516 / 400 KCAL</font></string>
    <string name="thursdayResumeActivity">QUINTA\n\n<font fgcolor="#B22222">3134 / 8000 Passos\n</font> <font fgcolor="#008000">2,4 / 6,5 KM\n</font><font fgcolor="#0047AB">322 / 400 KCAL</font></string>
    <string name="fridayResumeActivity">SEXTA\n\n<font fgcolor="#B22222">11101 / 8000 Passos\n</font> <font fgcolor="#008000">8,9 / 6,5 KM\n</font><font fgcolor="#0047AB">828 / 400 KCAL</font></string>
    <string name="saturdayResumeActivity">SÁBADO\n\n<font fgcolor="#B22222">11011 / 8000 Passos\n</font> <font fgcolor="#008000">9,2 / 6,5 KM\n</font><font fgcolor="#0047AB">670 / 400 KCAL</font></string>
    <string name="sundayResumeActivity">DOMINGO\n\n<font fgcolor="#B22222">247 / 8000 Passos\n</font> <font fgcolor="#008000">0,2 / 6,5 KM\n</font><font fgcolor="#0047AB">21 / 400 KCAL</font></string>
    <string name="othersResumeActivity">Outros Registos</string>

    <!-- Buttons -->
    <string name="loginButton">ENTRAR</string>
    <string name="registerButton">REGISTAR</string>
    <string name="recoveryPasswordButton">RECUPERAR</string>
    <string name="loginAgainButton">ENTRAR DE NOVO</string>
    <string name="logoutButton">LOGOUT</string>
    <string name="saveButton">GRAVAR</string>
    <string name="title_activity_teste">teste</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>