<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivityResumeActivity">

    <TextView
        android:id="@+id/activityResumeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-medium"
        android:padding="15dp"
        android:text="@string/activityResumeActivity"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/activityWeekResumeActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activityWeekResumeActivity"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/activityWeekResumeActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityResumeActivity" />

    <Button
        android:id="@+id/mondayResumeActivity"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/mondayResumeActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityWeekResumeActivity" />

    <Button
        android:id="@+id/tuesdayResumeActivity"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/tuesdayResumeActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityWeekResumeActivity" />

    <Button
        android:id="@+id/wednesdayResumeActivity"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/wednesdayResumeActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mondayResumeActivity" />

    <Button
        android:id="@+id/thursdayResumeActivity"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/thursdayResumeActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tuesdayResumeActivity" />

    <Button
        android:id="@+id/fridayResumeActivity"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/fridayResumeActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wednesdayResumeActivity" />

    <Button
        android:id="@+id/saturdayResumeActivity"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/saturdayResumeActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thursdayResumeActivity" />

    <Button
        android:id="@+id/sundayResumeActivity"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/sundayResumeActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fridayResumeActivity" />

    <Button
        android:id="@+id/othersResumeActivity"
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/grey"
        android:drawableBottom="@drawable/ic_registers_previous"
        android:text="@string/othersResumeActivity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saturdayResumeActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>