<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DiabetesCheckupActivity">

    <TextView
        android:id="@+id/diabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="15dp"
        android:text="@string/diabetes"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/checkupRegisterDiabetes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkupRegisterDiabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="15dp"
        android:text="@string/checkupRegisterDiabetes"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/last3RegistersDiabetes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diabetes" />

    <TextView
        android:id="@+id/last3RegistersDiabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/last3RegistersDiabetes"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/data1Diabetes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkupRegisterDiabetes" />

    <Button
        android:id="@+id/data1Diabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/data1Diabetes"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@id/data2Diabetes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last3RegistersDiabetes" />

    <Button
        android:id="@+id/data2Diabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/data2Diabetes"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/data3Diabetes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data1Diabetes" />

    <Button
        android:id="@+id/data3Diabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/data3Diabetes"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/newRegisterDiabetes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data2Diabetes" />

    <Button
        android:id="@+id/newRegisterDiabetes"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/grey"
        android:drawableBottom="@drawable/ic_diabetes_new_register"
        android:text="@string/newRegisterDiabetes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/previousRegistersDiabetes"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/grey"
        android:drawableBottom="@drawable/ic_previous_registers"
        android:text="@string/previousRegistersDiabetes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>