<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MeasuresCheckupActivity">

    <TextView
        android:id="@+id/measures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="15dp"
        android:text="@string/measures"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/checkupRegisterMeasures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkupRegisterMeasures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="15dp"
        android:text="@string/checkupRegisterMeasures"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/last3RegistersMeasures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/measures" />

    <TextView
        android:id="@+id/last3RegistersMeasures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/last3RegistersMeasures"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/data1Measures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkupRegisterMeasures" />

    <Button
        android:id="@+id/data1Measures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/data1Measures"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@id/data2Measures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last3RegistersMeasures" />

    <Button
        android:id="@+id/data2Measures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/data2Measures"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/data3Measures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data1Measures" />

    <Button
        android:id="@+id/data3Measures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/data3Measures"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/newRegisterMeasures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data2Measures" />

    <Button
        android:id="@+id/newRegisterMeasures"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/grey"
        android:drawableBottom="@drawable/ic_new_register_measures"
        android:text="@string/newRegisterMeasures"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/previousRegistersMeasures"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/grey"
        android:drawableBottom="@drawable/ic_registers_previous"
        android:text="@string/previousRegistersMeasures"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>